--- a/css/OA_header.css
+++ b/css/OA_header.css
@@ -43,12 +43,13 @@
     float: left;
 
 }
-.menu_box li{
+.menu_box>li{
     height: 100%;
     padding: 0 16px;
     line-height: 57px;
     font-size: 14px;
     color:rgba(99,103,110,1);
+    position: relative;
 }
 .phone{
     float: right;
@@ -80,4 +81,23 @@
     position: relative;
     top: 5px;
     margin-right: 7px;
+}
+.hover_menu{
+    width: 117px;
+    height: 177px;
+    position: absolute;
+    left: 0;
+    top: 60px;
+    background: url("../images/index/shoumebu.png");
+    padding: 13px 0 18px 29px;
+    z-index: 10;
+}
+.hover_menu>li{
+    height: 28px;
+    width: 100%;
+    font-size:14px;
+    font-family:Microsoft YaHei;
+    font-weight:bold;
+    color:rgba(0,0,0,1);
+    line-height: 28px;
 }
