--- a/css/OA_header.css
+++ b/css/OA_header.css
@@ -5,6 +5,9 @@
     background: #1E78E6
 }
 
+.opcity{
+    opacity: 0;
+}
 
 *{
     box-sizing: border-box;
@@ -53,9 +56,14 @@
     padding: 0 16px;
     line-height: 57px;
     font-size: 14px;
-    color:rgba(99,103,110,1);
+    color:#fff;
     position: relative;
+    opacity: 0.5;
+    font-weight: bold;
    
+}
+.menu_box>li:hover{
+    opacity: 1;
 }
 .menu_box>li .blue_border{
     transition: all .5s linear;
@@ -76,7 +84,7 @@
     display: inline-block;
     width:83px;
     height:28px;
-    border:1px solid rgba(30,120,230,1);
+    border:1px solid #fff;
     border-radius:14px;
     font-size: 14px;
     text-align: center;
@@ -87,12 +95,14 @@
     height: 100%;
     line-height: 57px;
     margin-left: 30px;
+    color: #fff;
 }
 .phone p i{
     width: 23px;
     height: 23px;
     display:inline-block;
     background: url(../images/OA/phone.png);
+    background-size: 100% 100%;
     position: relative;
     top: 5px;
     margin-right: 7px;
@@ -121,6 +131,7 @@
 }
 .hover_menu>li>a{
     margin-left: 29px;
+    color: #000;
 }
 .hover_menu>li.show{
     background: #E5F0F7
