--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,11 @@
+
+
+
 .banner_box{
     width: 100%;
     min-width: 1200px;
     height: 823px;
-    background: url('../images/index/banner_di.jpg') no-repeat;
+    background: url('../images/index/banner_di.png') no-repeat;
     background-size: 100% 100%;
     margin: 0 auto;
     margin-bottom: 320px;
@@ -17,9 +20,9 @@
 
 /* ===============输入框 */
 .header_input{
-    width: 450px;
-    height: 48px;
-    border-radius: 8px;
+    width: 398px;
+    height: 54px;
+    border-radius: 25px;
     border: 1px solid #fff;
     display: flex;
     justify-content: space-between;
@@ -37,14 +40,23 @@
 }
 .input_btn{
     display: inline-block;
-    width: 28%;
-    height: 44px;
-    border-radius: 5px;
+    width: 134px;
+    height: 48px;
+    border-radius: 25px;
     line-height: 46px;
     background: #1e78e6;
     text-align: center;
     color: #fff;
+    margin-right: 2px;
 
+}
+.input_jiantou{
+    display: inline-block;
+    background: url(../images/index/jiantou_btn.png);
+    background-size: 100% 100%;
+    width: 13px;
+    height: 9px;
+    margin-left: 8px;   
 }
 .yuan{
     width: 50%;
@@ -79,10 +91,15 @@
 .neiyuan > div{
     transition: all .3s linear
 }
+.neiyuan > div>div{
+    z-index: 999;
+}
 #zhongxin img{
     width: 77px;
     height: 77px;
 }
+
+
 #yuan1{
     width: 353px;
     height: 504px;
@@ -91,13 +108,32 @@
     right: -10%;
     z-index: 1;
 }
+#yuan1>div{
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 15%;
+    right: 40%;
+}
+
+
 #yuan2{
     width: 320px;
     height: 449px;
     position: absolute;
     top: -36%;
     left: 56px;
-    z-index: 2;
+    /* z-index: 2; */
+}
+#yuan2>div{
+    width: 150px;
+    height: 100px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 15%;
+    right: 27%;
+    transform: rotate(155deg)
 }
 #yuan3{
     width: 377px;
@@ -105,7 +141,16 @@
     position: absolute;
     top: 0px;
     left: 8px;
-    z-index: 3;
+    /* z-index: 3; */
+}
+#yuan3>div{
+    width: 120px;
+    height: 100px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 30%;
+    right: 55%;
+    transform: rotate(120deg)
 }
 #yuan4{
     width: 373px;
@@ -113,7 +158,16 @@
     position: absolute;
     top: 50%;
     left: 60px;
-    z-index: 4;
+    /* z-index: 4; */
+}
+#yuan4>div{
+    width: 100px;
+    height: 135px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 0%;
+    right: 60%;
+    /* transform: rotate(120deg) */
 }
 #yuan5{
     width: 224px;
@@ -121,7 +175,16 @@
     position: absolute;
     top: 50%;
     left: 167px;
-    z-index: 5;
+    /* z-index: 5; */
+}
+#yuan5>div{
+    width: 115px;
+    height: 80px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 40%;
+    right: 25%;
+    
 }
 #yuan6{
     width: 201px;
@@ -129,7 +192,17 @@
     position: absolute;
     top: 50%;
     left: 338px;
-    z-index: 6;
+    /* z-index: 6; */
+}
+#yuan6>div{
+    width: 80px;
+    height: 100px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 30%;
+    right: 48%;
+    transform: rotate(-25deg);
+    
 }
 #yuan7{
     width: 259px;
@@ -137,7 +210,16 @@
     position: absolute;
     top: 50%;
     left: 340px;
-    z-index: 7;
+    /* z-index: 7; */
+}
+#yuan7>div{
+    width: 80px;
+    height: 100px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 5%;
+    right: 40%;
+    transform: rotate(-45deg)
 }
 #yuan8{
     width: 240px;
@@ -145,7 +227,15 @@
     position: absolute;
     top: 18%;
     left: 310px;
-    z-index: 8;
+    /* z-index: 8; */
+}
+#yuan8>div{
+    width: 75px;
+    height: 80px;
+    position: absolute;
+    /* border: 1px solid #000; */
+    top: 30%;
+    right: 32%;
 }
 
 /*============================================进度条 */
@@ -170,7 +260,14 @@
     display: flex;
     justify-content: space-between;
 }
-
+.progress_title li{
+    border: 1px solid transparent;
+    padding: 12px 17px 10px 21px;
+    border-radius: 8px;
+}
+.progress_title li.show_border{
+    border: 1px solid #0184D6;
+}
 .progress_title li a{
     font-size:15px;
     font-family:Microsoft YaHei;
@@ -203,6 +300,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 .huankuai_btn{
     width: 45px;
@@ -214,7 +312,7 @@
     display: none;
     position: relative;
 }
-.opc{
+.dblock{
     display: block !important;
 }
 .huakuai{
@@ -227,7 +325,7 @@
     top: 50%;
     left: 50%;
     margin-top: -10px;
-    margin-left: -10px;
+    display: none;
 }
 .baitiao{
     width: 10%;
@@ -248,6 +346,7 @@
     margin: 0 auto;
     text-align: center;
     margin-top: 140px;
+    position: relative;
 }
 .zhanshi_cont{
     font-size:18px;
@@ -300,17 +399,25 @@
 }
 .project_item{
     width:234px;
-    height: 285px;
+    height: 286px;
     margin-right: 8px;
     background: #e5f0f7;
     padding: 50px 60px;
     text-align: left;
     transition: all .3s linear;
     cursor: pointer;
+    
+    
+   
 }
+ .project_item p,.project_item h2{
+    /* transform: translate3d(0,0,0); */
+    font-style: normal;
+    transform: scale(1);
+ }
 .m_scale{
    transition: all .3s linear;
-   transform: scale(1.05)
+   transform: scale(1.1)
 }
 .project_item:nth-child(2n){
     background: #f9fafe
@@ -331,6 +438,18 @@
     font-weight:300;
     line-height: 30px;
 }
+
+
+
+/* ================= */
+.jian_bian_tiao{
+    width: 100vw;
+    height: 255px;
+    background: url('../images/index/setiao@2x.png');
+    transform: translateY(120%);
+    z-index: -2;
+}
+
 /* ================================行业 */
 .industry{
     width: 100%;
@@ -346,7 +465,9 @@
     position: absolute;
     left: 0;
     top: 0;
-    z-index: -1;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
 }
 .industry_content{
     width: 340px;
@@ -388,6 +509,7 @@
     left: 0; 
     top: 0;
     background: url('../images/index/hangye.png');
+    z-index: 9;
 }
 .industry_btn>div{
     font-size:24px;
