--- a/css/OA.css
+++ b/css/OA.css
@@ -52,7 +52,7 @@
 /* =============背景部分结束==================== */
 .carousel_bg{
     width: 1200px;
-    background: url('../images/OA/carousel_bg.png');
+    background: #f7f7f7;
     background-size: 100% 100%;
     height: 730px;
     margin:  0 auto;
@@ -108,8 +108,9 @@
     justify-content: space-between;
     /* margin-bottom: 110px; */
     align-items: center;
-    height: 500px;
+    height: 550px;
 }
+
 .OA_reverse{
     flex-direction: row-reverse;
     padding-right:0px !important;
@@ -118,6 +119,9 @@
 .OA_card_left{
     width: 230px;
     text-align: left;
+}
+.OA_card div:not(.OA_card_left) img{
+    width: 80%;
 }
 .OA_card .OA_card_right img{
     
