--- a/css/OA_header.css
+++ b/css/OA_header.css
@@ -31,6 +31,12 @@
     /* height: 56px; */
     margin:  0 auto;
     padding: 0 40px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -600px;
+    z-index: 999;
+     background: transparent;
 }
 .header::after{
     content: "";
