--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,11 @@
 .yuan  img{
     width: 80%;
 }
+.yuan a{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
 #zhongxin{
     width: 163px;
     height: 163px;
@@ -406,17 +411,17 @@
     text-align: left;
     transition: all .3s linear;
     cursor: pointer;
-    
+    /* background-image: url('../images/index/item1.png') */
     
    
 }
  .project_item p,.project_item h2{
-    /* transform: translate3d(0,0,0); */
-    font-style: normal;
-    transform: scale(1);
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
  }
 .m_scale{
-   transition: all .3s linear;
    transform: scale(1.1)
 }
 .project_item:nth-child(2n){
@@ -427,16 +432,18 @@
     color:rgba(40,40,40,1);
 }
 .project_item h2{
-    font-size:24px;
+    font-size:18px;
     font-weight:400;
     line-height:24px;
     margin-bottom: 27px;
     white-space: nowrap;
+    text-align: center;
 }
 .project_item p{
-    font-size:20px;
+    font-size:14px;
     font-weight:300;
     line-height: 30px;
+    text-align: center;
 }
 
 
@@ -475,6 +482,7 @@
     text-align: left;
     position: relative;
     bottom: -61px;
+    z-index: 10;
 }
 .industry_content .i_t{
     font-size:26px;
