--- a/css/OA.css
+++ b/css/OA.css
@@ -25,6 +25,10 @@
     height: auto;
     position: absolute;
     top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
 }
 .content_title_box .content_title h2{
     font-size:42px;
@@ -122,7 +126,7 @@
     text-align: left;
 }
 .OA_card div:not(.OA_card_left) img{
-    width: 80%;
+    width: 100%;
 }
 .OA_card .OA_card_right img{
     
