--- a/css/OA_header.css
+++ b/css/OA_header.css
@@ -32,7 +32,7 @@
     width:1200px;
     /* height: 56px; */
     margin:  0 auto;
-    padding: 0 40px;
+    /* padding: 0 40px; */
     position: absolute;
     top: 0;
     left: 50%;
