--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 .banner_box{
     width: 100%;
     min-width: 1200px;
+    /* overflow: hidden; */
     height: 883px;
     background: url('../images/index/banner_di.png') no-repeat;
     background-size: contain;
@@ -15,12 +16,13 @@
     height: 100%;
     margin: 0 auto;
     position: relative;
+    /* overflow: hidden; */
     
 }
 
 /* ===============输入框 */
 .header_input{
-    width: 398px;
+    width: 378px;
     height: 54px;
     border-radius: 25px;
     border: 1px solid #fff;
@@ -65,8 +67,18 @@
     position: absolute;
     bottom: -118px;
     border-radius: 100%;
-    transform: scale(0.9) 
+    transform: scale(0.8);
+    transform: translateX(113px)
 }
+@media screen and (max-width:1600px){
+    .yuan{
+        transform: translate(10px,-173px) scale(0.8) !important;
+    }
+    .banner_box{
+        margin-bottom: 0px !important;
+    }
+  }
+
 .neiyuan{
     width: 100%;
     height: 100%;
@@ -89,6 +101,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* display: none */
 }
 .neiyuan > div{
     transition: all .3s linear;
@@ -110,14 +123,15 @@
     width: 456px;
     height: 319px;
     position: absolute;
-    right: 425px;
-    top: 120px;
+    right: 404px;
+    top: 90px;
     transform-origin: 100% 100%;
     transform: rotate(90deg);
     z-index: 11;
 }
 #yuan1>img{
     z-index: 11;
+    width: 97%;
 }
 #yuan1>div{
     width: 200px;
@@ -531,6 +545,7 @@
     text-align: center;
     /* margin-top: 140px; */
     position: relative;
+    /* overflow: hidden; */
 }
 .zhanshi_cont{
     font-size:18px;
@@ -649,7 +664,7 @@
 
 /* ================= */
 .jian_bian_tiao{
-    width: 100vw;
+    width: 100%;
     height: 255px;
     background: url('../images/index/setiao@2x.png');
     transform: translateY(60%);
@@ -727,7 +742,7 @@
     color:rgba(255,255,255,1);
 }
 .industry_btn{
-    width: 150px;
+    width: 138px;
     height: 100%;
     position: absolute;
     left: 0; 
@@ -736,27 +751,29 @@
     z-index: 9;
 }
 .industry_btn>div{
-    font-size:24px;
+    font-size:18px;
     font-family:Microsoft YaHei;
     font-weight:400;
     color:rgba(40,40,40,1);
-    height: 25%;
+    height: 28%;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all .5s linear;
+    /* transition: all .5s linear; */
     cursor: pointer;
+
 }
 .industry_btn>div.btn_show{
-    width: 288px;
+    width: 182px;
+    height: 106px;
     background: url('../images/index/hangye_bg.png') no-repeat;
     background-size: 100% 100%;
     position: relative;
-    left: -50%;
+    left: -20px;
     color: #0184D6;
-    font-size: 34px;
+    font-size: 20px;
     line-height: 190px;
-    transition: all .3s linear;
+    /* transition: all .3s linear; */
     
 }
 .btn_show i{
