--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
     min-width: 1200px;
     /* overflow: hidden; */
     height: 883px;
-    background: url('../images/index/banner_di.png') no-repeat;
+    background: url('../images/index/banner_di1.png') no-repeat;
     background-size: contain;
     margin: 0 auto;
     margin-bottom: 239px;
@@ -123,7 +123,7 @@
     width: 456px;
     height: 319px;
     position: absolute;
-    right: 404px;
+    right: 403px;
     top: 90px;
     transform-origin: 100% 100%;
     transform: rotate(90deg);
@@ -158,7 +158,7 @@
     width: 411px;
     height: 293px;
     position: absolute;
-    right: 425px;
+    right: 424px;
     top: 133px;
     transform-origin: 100% 100%;
     transform: rotate(45deg);
@@ -193,7 +193,7 @@
     height: 241px;
     position: absolute;
     right: 440px;
-    bottom: 260px;
+    bottom: 261px;
     transform-origin: 100% 100%;
     transform: rotate(0deg);
     z-index: 9;
@@ -370,8 +370,8 @@
     width: 224px;
     height: 159px;
     position: absolute;
-    left: 60px;
-    bottom: 257px;
+    left: 59px;
+    bottom: 256px;
     transform-origin: 100% 100%;
     transform: rotate(-225deg);
     z-index: 4;
