--- a/css/contentStyle_pc.css
+++ b/css/contentStyle_pc.css
@@ -33,7 +33,8 @@ body {
   font-size: 14px;
   color: #333;
   min-width: 1200px;
-  margin: 0;
+  /* max-width: 1800px; */
+  margin: 0 auto;
   padding: 0;
 }
 .main{
