--- a/css/index.css
+++ b/css/index.css
@@ -675,6 +675,7 @@
     width: 100%;
     height: 255px;
     background: url('../images/index/setiao@2x.png');
+    background-size: cover;
     transform: translateY(60%);
     z-index: -2;
     overflow: hidden;
