--- a/css/OA.css
+++ b/css/OA.css
@@ -1,13 +1,18 @@
 /*=============主题============================= */
 
 
-
+.card_ml{
+    padding-left: 56px;
+}
+.card_mr{
+    padding-left: 154px !important
+}
 
 /* =========header结束============== */
 
 .content{
     width: 100%;
-    height: 550px;
+    height: 612px;
     margin: 0 auto;
 }
 .content_title_box{
@@ -25,7 +30,9 @@
     height: auto;
     position: absolute;
     top: 120px;
-    
+}
+.c_t_left{
+    left: 203px
 }
 .content_title_box .content_title h2{
     font-size:42px;
@@ -116,7 +123,7 @@
 .OA_reverse{
     flex-direction: row-reverse;
     padding-right:0px !important;
-    padding-left: 120px !important;
+    padding-left: 45px;
 }
 .OA_card_left{
     width: 297px;
@@ -146,6 +153,7 @@
     font-weight:300;
     color:rgba(1,1,1,1);
     line-height: 26px;
+    padding-right: 20px
 }
 .OA_card .OA_card_left .OA_content_btn{
     display: block;
