--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,38 @@
 
 
 
+@media screen and (max-width:1600px){
+    .yuan{
+        transform: translate(10px,-173px) scale(0.8) !important;
+    }
+    .banner_box{
+        margin-bottom: 0px !important;
+    }
+  }
+  @media screen and (max-width:1360px){
+    .yuan{
+        transform: translate(0px,70px) scale(0.65) !important;
+    }
+    .banner_box{
+        margin-bottom: 206px !important;
+        height: 554px !important;
+    }
+    .content_title_box div.banner_weitiao{
+        top:173px !important;
+    }
+  }
+
+
+.content_title_box div.banner_weitiao{
+    top:263px;
+    right:0;
+    margin-right:67px;
+    width: 520px;
+    display: flex;
+     flex-direction: column;
+     align-items: flex-end;
+}
+
 .banner_box{
     width: 100%;
     min-width: 1200px;
@@ -67,26 +99,9 @@
     position: absolute;
     bottom: -118px;
     border-radius: 100%;
-    transform: scale(0.8);
-    transform: translateX(113px)
+    transform: translateX(20px) scale(0.8);
 }
-@media screen and (max-width:1600px){
-    .yuan{
-        transform: translate(10px,-173px) scale(0.8) !important;
-    }
-    .banner_box{
-        margin-bottom: 0px !important;
-    }
-  }
-  @media screen and (max-width:1360px){
-    .yuan{
-        transform: translate(10px,-93px) scale(0.65) !important;
-    }
-    .banner_box{
-        margin-bottom: 0px !important;
-        height: 733px;
-    }
-  }
+
 .neiyuan{
     width: 100%;
     height: 100%;
@@ -597,13 +612,22 @@
     text-align: left;
     margin-right: 120px;
     margin-top: 115px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.fun_list .fun_item div:first-child{
+    width: 100%;
+    height: 116px;
+    display: flex;
+    align-items: center
 }
 .fun_list .fun_item:nth-child(3n){
     margin-right: 0;
 }
 .fun_item_t{
     font-size:18px;
-    font-family:Microsoft YaHei;
+    font-family:"Microsoft YaHei";
     font-weight:400;
     color:rgba(1,132,214,1);
     margin-top: 38px;
@@ -746,7 +770,7 @@
     text-align: center;
     line-height: 32px;
     font-size:16px;
-    font-family:Microsoft YaHei;
+    font-family:"Microsoft YaHei";
     font-weight:400;
     color:rgba(255,255,255,1);
 }
@@ -758,10 +782,15 @@
     top: 0;
     background: url('../images/index/hangye.png');
     z-index: 9;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .industry_btn>div{
     font-size:18px;
-    font-family:Microsoft YaHei;
+    width: 100%;
+    height: 106px !important;
+    font-family:"Microsoft YaHei";
     font-weight:400;
     color:rgba(40,40,40,1);
     height: 26%;
