--- a/css/OA_footer.css
+++ b/css/OA_footer.css
@@ -81,6 +81,23 @@
     /* width: 100%; */
     cursor: pointer;
 }
+.brand_b_h{
+    color: #000;
+    margin-bottom: 15px;
+    font-size:28px;
+    font-family:"Microsoft YaHei";
+    font-weight:400;
+}
+
+.brand_yinying{
+    width: 100%;
+    height: 341px;
+    background: url('../images/index/yinying2.png');
+    background-size: 100% 100%;
+    position: absolute;
+    bottom: 843px;
+    z-index: -1;
+}
 /* =================================== */
 .footer{
     width: 100%;
